# ZPG-project

Task1/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CompositeTransformation.cpp  CompositeTransformation.h  DrawableObject.cpp  DrawableObject.h  DynamicRotate.cpp  DynamicRotate.h  FireFly.h  FireFlyObject.cpp  FireFlyObject.h  Light.h  Model.cpp  Model.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SkyBox.cpp  SkyBox.h  Texture.h  TextureLoader.cpp  TextureLoader.h  Transform.cpp  Transform.h  Transformation.cpp  Transformation.h  main.cpp
Task1/Models/: triangle.h
Task1/Shaders/: basic.vert  blinn.frag  constant.frag  lambert.frag  normalsTexture.vert  phong.frag  phongMultiLight.frag  phongMultiLightTexture.frag  skyBox.frag  skyBox.vert
Task1/assets/: text2.mtl
untitled/: CMakeLists.txt
